# hsk_rt_rpf_samples

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  download_sponza.py  glslConfigs.conf
data/textures/: readme.md
sponza_model/: download_sponza.py
src/: CMakeLists.txt  configurepath.hpp.in  customrtstage.cpp  customrtstage.hpp  main.cpp  sponza_sample.cpp  sponza_sample.hpp
src/shaders/: main.frag.spv  raygen.rgen  raygen.rgen.spv
src/shaders/compute/: scalemotion.comp
src/shaders/ray-default/: anyhit.rahit  anyhit.rahit.spv  closesthit.rchit  closesthit.rchit.spv  miss.rmiss  miss.rmiss.spv
